feat: add Teams section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,18 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.earth {
+  animation: rotate 10s linear infinite;
+  width: 350px;
+  height: auto;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
