--- a/src/widgets/settings-tab/settings-tab.module.css
+++ b/src/widgets/settings-tab/settings-tab.module.css
@@ -6,19 +6,17 @@
 .pane {
   transition: all 0.15s ease-in-out;
   will-change: width;
-  height: 48px;
+  height: var(--tab-title-size);
 }
 
 .tab-nav {
   width: 100%;
   display: flex;
-  border-bottom: 1px;
-  border-color: var(--primary-glow);
 }
 
 .tab-list {
   width: 100%;
-  height: calc(100% - 48px);
+  height: calc(100% - var(--tab-title-size));
   overflow-y: auto;
 }
 
