--- a/src/features/code-editor/code-editor.module.css
+++ b/src/features/code-editor/code-editor.module.css
@@ -12,6 +12,7 @@
 .editor-wrapper {
   width: 100%;
   height: 100%;
+  padding-right: 50px;
 }
 
 .editor .tools {
@@ -21,5 +22,5 @@
   display: flex;
   flex-direction: column;
   margin: 10px;
-  margin-right:  15px;
+  margin-right: 15px;
 }
