--- a/src/shared/styles/resize-custom.css
+++ b/src/shared/styles/resize-custom.css
@@ -1,15 +1,3 @@
-.read-only {
-  /* background-color: #f4f4f4 !important; */
-}
-
-.read-only .cm-editor {
-  /* background-color: #f4f4f4; */
-}
-
-.read-only .cm-gutters {
-  /* background-color: #f4f4f4; */
-}
-
 .cm-focused {
   outline: none !important;
 }
@@ -25,11 +13,19 @@
   border-color: #00000000 !important;
 }
 
+.cm-theme {
+  height: 100%;
+}
+
+.cm-editor {
+  height: 100%;
+}
+
 .sash::before {
   border-radius: 5px;
 
-  background: blue !important;
-  opacity: 30%;
+  background: #2c58f7 !important;
+  opacity: 50%;
   transition:
     width 0.3s ease-in-out,
     height 0.3s ease-in-out,
