--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,32 @@ a {
   text-decoration: none;
 }
 
-html {
-  scrollbar-color: #6969dd #e0e0e0;
-  scrollbar-width: thin;
+.cm-theme .cm-scroller {
+  overflow-y: auto;
+}
+
+.scrollable::-webkit-scrollbar,
+.cm-scroller::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  border: 1px solid #6969dd;
+  border-radius: 10px;
+}
+
+.scrollable::-webkit-scrollbar-track,
+.cm-scroller::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.scrollable::-webkit-scrollbar-thumb,
+.cm-scroller::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  height: 10px;
+  background-color: #6969dd;
+  border-radius: 10px;
+}
+
+.scrollable::-webkit-scrollbar-corner,
+.cm-scroller::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
