test: init test settings, add test for graphql-client component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,3 +107,7 @@ a {
 .cm-scroller::-webkit-scrollbar-corner {
   background-color: transparent;
 }
+
+.cm-variable {
+  color: #ff79c6; /* Выберите цвет для переменных */
+}
